@@ -794,7 +794,12 @@ b.conum * { color: inherit !important; }
 </div>
 <div class="paragraph">
 <p>This is the release notes for version 3.1.79-15.
-Multiple bugs and security bugs has been reported and fixed, prior the next release LTS.</p>
+Multiple bugs and security bugs has been reported and fixed, prior the next release LTS.
+If you want to update from a version prior to 3.1.79-15, please download and
+execute first this script in the node where you will make the cluster update process:</p>
+</div>
+<div class="paragraph">
+<p><a href="http://repo.redborder.com/utils/rb_preupdate_79-15.sh" class="bare">http://repo.redborder.com/utils/rb_preupdate_79-15.sh</a></p>
 </div>
 <div class="sect2">
 <h3 id="_what_s_new">What&#8217;s new</h3>
